# eZeGo

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.MD
docs/: roadmap.md
libs/: CMakeLists.txt
src/: configs.hpp  definitions.hpp  entry.cpp
src/application/: application.cpp  application.hpp
src/application/fonts/: Fonts.hpp
src/core/: definitions.hpp
src/core/actions/: action_records.hpp  actions.cpp  actions.hpp  commands.cpp  commands.hpp
src/core/assertion/: assertions.hpp
src/core/containers/: ring_stack.hpp
src/core/file/: fileIO.cpp  fileIO.hpp
src/core/logger/: logger.cpp  logger.hpp
src/core/memory/: memory.cpp  memory.hpp
src/core/platform/: plat_linux.cpp  plat_mac.cpp  plat_win32.cpp  platform.hpp
src/core/serial/: SerialInterface.cpp  SerialInterface.hpp
test/: CMakeLists.txt  file_io_test.cpp  serial_test.py
